# btc_sp1

./: raw
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: block.json  esplora_api.rs  main.rs
