[workspace]
[package]
version = "0.1.0"
name = "btc_sp1-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bitcoin = "0.31.1"
hex = { package = "hex-conservative", version = "0.2.0" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
